Fix squashed headshot images and stats panel not appearing
new bugs were due to previous commit

--- a/trackerStyle.css
+++ b/trackerStyle.css
@@ -384,7 +384,6 @@ trackerBlock button {
   border-width: 2px 0 0 0;
   box-sizing: border-box;*/
   place-self: center;
-  overflow: hidden;
 }
 
 #hpPanelsContainer * {
